--- a/site/css/charts.scss
+++ b/site/css/charts.scss
@@ -32,6 +32,8 @@
     width: 100%;
     background-color: white;
     margin: 0 0 40px 0;
+    position: relative;
+    z-index: 1000;
 
     h1 {
       margin: 55px;
