--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -382,7 +382,7 @@ body {
 .directions {
   display: none;
   position: absolute;
-  bottom: 150px;
+  bottom: 35px;
   text-align: center;
   margin: 85px auto 0 auto;
   z-index: 100;
@@ -391,6 +391,10 @@ body {
 
   &:hover {
     cursor: default;
+
+    span {
+    	background: white;
+    }
   }
 
   span {
@@ -482,16 +486,35 @@ body {
 	opacity: 1;
 }
 
+
+.slim {
+	#data-lib {
+		display: block;
+	}
+
+	&.results {
+		#data {
+			padding: 0 40px 0 990px;
+		}
+	}
+
+	#data_scroll {
+  	left: 67%;
+  	margin-left: 208px;
+  }
+}
+
 #data-lib {
+	display: none;
 	position: fixed;
 	left: 400px;
 	top: 0;
 	width: 550px;
 	height: 100%;
-	border-right: 1px solid #ECECEC;
+	border-right: 1px solid #E8E8E8;
 	padding: 34px 32px;
 	margin-left: 0;
-	background-color: #FFF;
+	background-color: #FCFCFC;
 	z-index: 999;
 	opacity: 0;
 	visibility: hidden;
@@ -527,7 +550,7 @@ body {
 	#col_wrap {
 		height: 100px;
 		line-height: 130px;
-		background: #fff;
+		// background: #fff;
 		z-index: 1001;
 		position: relative;
 		width: 100%;
@@ -543,21 +566,38 @@ body {
 	#data_cols {
 		opacity: 0;
 		transition: all 400ms ease-in-out;
-		span {
-			color: #C8C8C8;
-			font-size: 18px;
-			text-transform: uppercase;
-			position: relative;
-			top: 1px;
-			letter-spacing: 2.2px;
+
+		h3.middle {
+			position: absolute;
 			font-family: "Avenir Medium";
+			font-weight: normal;
+			letter-spacing: 0;
+			text-transform: uppercase;
+			font-size: 19px;
+			color: #2E2E2E;
+			top: -2px;
+			left: 0;
+			width: 100%;
+			margin: 0;
+			padding: 0;
+			text-align: center;
+			z-index: 0;
+			text-transform: none;
+
+			span {
+				color: #C8C8C8;
+				font-size: 18px;
+				text-transform: uppercase;
+				position: relative;
+				top: 1px;
+				letter-spacing: 2.2px;
+				font-family: "Avenir Medium";
+			}
 		}
 	}
 
 	div {
-		position: absolute;
-		left: 0;
-		width: 100%;
+		position: relative;
 		font-family: "Avenir Black";
 		letter-spacing: 0.05rem;
 		text-transform: uppercase;
@@ -565,12 +605,21 @@ body {
 		font-size: 18px;
 		z-index: 1;
 		text-align: right;
+		height: inherit;
 
-		&:nth-child(odd) {
-			right: 0;
-			left: auto;
-			top: 0;
-			text-align: left;
+		// &:nth-child(odd) {
+		// 	right: 0;
+		// 	left: auto;
+		// 	top: 0;
+		// 	text-align: left;
+		// }
+
+		&.left {
+			float: left;
+		}
+
+		&.right {
+			float: right;
 		}
 
 		a {
@@ -605,7 +654,7 @@ body {
 		font-size: 21px;
 		width: 100%;
 		padding: 0;
-    opacity: 0;
+   	opacity: 0;
     transition: all 500ms;
     top: 0;
 
@@ -620,6 +669,7 @@ body {
 			&:nth-child(odd) {
 				letter-spacing: 0.03rem;
 				word-break: break-word;
+				  padding-right: 15px;
 			}
 
 			&:nth-child(even) {
@@ -753,8 +803,8 @@ body {
 	display: none;
 	z-index: 1;
 	position: fixed;
-	left: 67%;
-	margin-left: 208px;
+	left: 50%;
+	margin-left: 175px;
 	bottom: 60px;
 	color: #373737;
 	font-size: 32px;
@@ -892,7 +942,7 @@ footer {
 }
 
 .results {
-	background: #F7F7F7;
+	background: #FCFCFC;
 
 	#searchWrap {
 		position: fixed;
@@ -900,10 +950,10 @@ footer {
 		top: 0;
 		width: 400px;
 		height: 100%;
-		border-right: 1px solid #ECECEC;
+		border-right: 1px solid #E8E8E8;
 		padding: 34px 32px;
 		margin-left: 0;
-		background-color: white;
+		background-color: #f9f9f9;
 		z-index: 1001;
 	}
 
@@ -911,21 +961,19 @@ footer {
 		&.show {
 			opacity: 1;
 			visibility: visible;
-			background-color: #fafafa;
 		}
 	}
 
 	#data {
-		padding: 0 40px 0 990px;
+		padding: 0 40px 0 440px;
 
-		#col_wrap {
-			background: #F7F7F7;
-		}
+		// #col_wrap {
+		// 	background: #F7F7F7;
+		// }
 	}
 
 	footer {
 		padding: 8px 40px 8px 440px;
-		background-color: #F7F7F7;
 		border-top: 1px solid #E5E5E5;
 
 		#authors {
