--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -521,7 +521,7 @@ body {
 	transition: all 800ms ease-in-out;
 
 	h3#data-name {
-		font-size: 38px;
+		font-size: 30px;
 		font-weight: 100;
 		margin-top: 24px;
 	}
@@ -706,6 +706,15 @@ body {
 		  background-size: 10px 10px;
 		}
 
+		.github {
+			margin-left: 20px;
+			font-size: 14px;
+
+			&:hover {
+				color: #29BD66;
+			}
+		}
+
 		.text-green {
 			font-size: 15px;
 			padding: 0;
@@ -720,6 +729,7 @@ body {
 		  height: 10px;
 		  background-size: 10px 10px;
 		  transform: rotate(45deg);
+		  margin-left: 5px;
 		}
 
 		#data_more {
