--- a/css/main.scss
+++ b/css/main.scss
@@ -491,6 +491,7 @@ body {
 .slim {
 	#data-lib {
 		display: block;
+		overflow-y: scroll; 
 	}
 
 	&.results {
@@ -520,6 +521,20 @@ body {
 	opacity: 0;
 	visibility: hidden;
 	transition: all 800ms ease-in-out;
+
+	.close {
+		display: none;
+		position: absolute;
+		top: 30px;
+		right: 30px;
+		line-height: 13px;
+		border-radius: 4px;
+		background-color: #29BD66;
+		color: #FFF;
+		padding: 14px 16px 10px 16px;
+		font-weight: bold;
+		font-size: 15px;
+	}
 
 	h3#data-name {
 		font-size: 30px;
@@ -851,6 +866,28 @@ footer {
 	line-height: 2;
   transition: all 800ms ease-in-out;
 
+  .footer-chart {
+  	display: none;
+		background-color: #00D075;
+		background-image: url("../images/chart.svg");
+		background-size: 22px;
+		width: 14px;
+		background-repeat: no-repeat;
+		background-position: 50%;
+		height: 14px;
+		padding: 17px;
+		border-radius: 3px;
+		position: absolute;
+		left: 50%;
+		top: 8px;
+		margin-left: -15px;
+		transition: all 300ms ease-in-out;
+
+		&:hover {
+			background-color: #00c06c;
+		}
+  }
+
 	#authors {
 		float: left;
 	}
@@ -975,7 +1012,7 @@ footer {
 		padding: 34px 32px;
 		margin-left: 0;
 		background-color: #f9f9f9;
-		z-index: 1001;
+		z-index: 998;
 	}
 
 	#data-lib {
@@ -1140,6 +1177,60 @@ footer {
 	
 }
 
+@media screen and ( max-width: 1400px ){
+	.slim {
+		#data_scroll {
+		  left: 50%;
+  		margin-left: 190px;
+		}
+
+		#data-lib {
+			top: 0;
+			bottom: auto;
+			height: 55%;
+			width: 100%;
+			left: 0;
+			border-right: 0;
+			border-bottom: 1px solid #E8E8E8;
+			padding-left: 440px;
+			overflow: hidden;
+
+			h3#data-name {
+			  font-size: 27px;
+			  font-weight: 300;
+			  margin-top: 0;
+			}
+		}
+
+		&.results{
+			#data {
+			  padding: 0 40px 0 440px;
+			  height: 45%;
+			  position: absolute;
+			  width: 100%;
+			  bottom: 0;
+			  top: auto;
+			  overflow: scroll;
+
+			  table {
+				  font-size: 18px;
+
+				  td {
+				  	padding: 10px 0 7px 0;
+  					word-break: break-all;
+
+  					&:nth-child(even) {
+  						width: 25%;
+  						font-size: 16px;
+  					}
+				  }
+				}
+			}
+		}
+	}
+}
+
+
 @media screen and ( max-width: 1050px ){
 	.results #data {
 		padding: 0 40px 0 440px;
@@ -1175,6 +1266,44 @@ footer {
 }
 
 @media screen and ( max-width: 850px ){
+
+	.slim {
+		#data-lib {
+			bottom: 0;
+			left: 0;
+			top: auto;
+			height: 0;
+			width: 100%;
+			left: 0;
+			border-right: 0;
+			border-bottom: 0;
+			padding-left: 40px;
+			overflow: hidden;
+			position: fixed;
+			z-index: 999;
+			transition: all 800ms ease-in-out;
+
+	  	&.slideUp {
+				height: 100%;
+	  	}
+
+	  	.close {
+	  		display: block;
+	  	}
+	  }
+
+	  &.results #data {
+		  padding: 0 35px;
+		  height: inherit;
+		  position: relative;
+		  width: 100%;
+		  bottom: auto;
+		  top: auto;
+		  overflow: scroll;
+		}
+	}
+
+
 	#subscribe_ {
 		display: none!important;
 	}
@@ -1195,11 +1324,17 @@ footer {
 			border: 0;
 			padding: 30px 35px;
 			float: left;
+			border-right: 0;
+			border-bottom: 1px solid #E8E8E8;
 		}
 
 		footer {
 			padding: 12px 35px 12px 35px;
 			background: #F7F7F7;
+
+			.footer-chart {
+				display: block;
+			}
 		}
 
 		#query {
@@ -1445,6 +1580,14 @@ footer {
 			}
 			#sponsors {
 				float: none;
+			}
+		}
+
+		footer {
+			.footer-chart {
+				right: 35px;
+  			left: auto;
+  			z-index: 1000;
 			}
 		}
 	}
