--- a/css/main.scss
+++ b/css/main.scss
@@ -558,16 +558,62 @@ body {
 	}
 
 	.addData {
-		display: inline-block;
-		border-radius: 4px;
-		background-color: #29BD66;
-		color: #FFF;
-		padding: 14px 16px 10px 16px;
-		font-weight: bold;
-		margin: 30px 0 0 46px;
-		font-size: 15px;
+		position: relative;
+		margin-top: 30px;
 	}
 }
+
+.loader {
+	display: none;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 2.5px;
+  text-indent: -9999em;
+  border-top: 3px solid rgba(1, 1, 1, 0.1);
+  border-right: 3px solid rgba(1, 1, 1, 0.1);
+  border-bottom: 3px solid rgba(1, 1, 1, 0.1);
+  border-left: 2px solid #29BD66;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+
+  &.show {
+  	display: block;
+  }
+}
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 
 tr.noHover {
 	border: 0!important;
