all sorts of small enhancements

--- a/css/main.scss
+++ b/css/main.scss
@@ -196,7 +196,35 @@ body {
   display: none;
   @include custom-bezier(all, .4s);
   border-radius: 3px;
-  min-height: 100px;
+  min-height: 70px;
+
+  &.compare {
+		left: 440px;
+		top: auto;
+		bottom: 104px;
+		position: fixed;
+		width: 469px;
+
+		&:before {
+			bottom: -8px;
+			top: auto;
+			left: 16px;
+			border-left: 8px solid rgba(0, 0, 0, 0);
+			border-right: 8px solid rgba(0, 0, 0, 0);
+			border-top: 8px solid #29BD66;
+			border-bottom: 0;
+		}
+
+		&:after {
+			bottom: -6px;
+			top: auto;
+			left: 18px;
+			border-left: 6px solid rgba(0, 0, 0, 0);
+			border-right: 6px solid rgba(0, 0, 0, 0);
+			border-top: 6px solid #fff;
+			border-bottom: 0;
+		}
+  }
 
   .loader {
   	display: block;
@@ -339,9 +367,39 @@ body {
     @include custom-bezier(font-size, .8s);
 
 		o {
-			color: #6fd99a
+			color: #29BD66;
+			animation: oPulse 2s infinite ease-in-out;
+  		-webkit-animation: oPulse 2s infinite ease-in-out;
 		}
 	}
+}
+
+@-webkit-keyframes oPulse {
+  0% {
+    opacity: 1; 
+  }
+
+  50% {
+    opacity: .7; 
+  } 
+
+  0% {
+    opacity: 1; 
+  }
+}
+
+@keyframes oPulse {
+  0% {
+    opacity: 1; 
+  }
+
+  50% {
+    opacity: .7; 
+  } 
+
+  0% {
+    opacity: 1; 
+  }
 }
 
 #slogan {
@@ -592,52 +650,6 @@ body {
 	opacity: 1;
 }
 
-.closePanel {
-	display: none;
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	font-size: 10px;
-	text-transform: uppercase;
-}
-
-#data-lib {
-	.closePanel {
-		display: none;
-	}
-}
-
-.slim {
-	.closePanel {
-		display: block;
-	}
-}
-
-.panelOpen {
-	&.slim.results {
-		#data {
-			right: -100%;
-		}
-	}
-
-	&.slim {
-		#data-lib {
-			width: 100%;
-			padding-left: 440px;
-			left: 0;
-			bottom: 0;
-
-			.closePanel {
-				display: block;
-			}
-
-			.bottomCompare {
-				left: 400px;
-			}
-		}
-	}
-}
-
 .slim {
 	#data-lib {
 		display: block;
@@ -662,12 +674,8 @@ body {
 		h3#data-name {
 			font-size: 20px;
 
-			span {
-				top: -1px
-			}
-
-			a.badge {
-				top: 8px;
+			span, a.badge {
+				top: -3px
 			}
 		}
 	}
@@ -713,11 +721,11 @@ body {
 			padding: 6px 24px 3px 5px;
 			border-radius: 3px;
 			position: relative;
-			top: -4px;
-			margin-right: 3px;
-			margin-left: 4px;
+			top: 0px;
+			margin-left: 5px;
 			height: 29px;
 			display: inline-block;
+			float: right;
 
 			&:hover {
 				background-color: #f5f5f5;
@@ -737,18 +745,18 @@ body {
 
 		a.badge {
 			position: relative;
-		  top: 5px;
+		  top: 0;
 		  border-radius: 3px;
-		  margin-left: 4px;
+		  margin-left: 5px;
 		  background-image: url("../images/star.svg");
 		  background-size: 63%;
 		  background-position: center center;
 		  background-repeat: no-repeat;
 		  display: inline-block;
+		  float: right;
 		  width: 29px;
 		  height: 29px;
 		  border: 1px solid #4973D6;
-		  color: #4973D6;
 		  padding: 0;
 
 			&:hover {
@@ -806,6 +814,25 @@ body {
 
 	#time-series {
 		width: 100%;
+		position: relative;
+
+		.chartHolder {
+
+		}
+
+		.bigNumber {
+			display: none;
+			font-size: 110px;
+			color: #29BD66;
+			background-color: none;
+			opacity: 0.1;
+			position: absolute;
+			right: 30px;
+			top: 163px;
+			line-height: 1;
+			margin: 0;
+			padding: 0;
+		}
 	}
 
 	.bottomCompare {
@@ -814,6 +841,7 @@ body {
 		right: 0;
 		left: 0;
 		border-top: 1px solid #E8E8E8;
+		background-color: #FCFCFC;
 		padding: 18px 40px 40px;
 
 		&:before, &:after {
@@ -1170,21 +1198,6 @@ tr.noHover {
 
 }
 
-@-moz-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    -moz-transform: translateY(0);
-    transform: translateY(0);
-  }
-  40% {
-    -moz-transform: translateY(-30px);
-    transform: translateY(-30px);
-  }
-  60% {
-    -moz-transform: translateY(-15px);
-    transform: translateY(-15px);
-  }
-}
-
 @-webkit-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     -webkit-transform: translateY(0);
@@ -1222,27 +1235,24 @@ tr.noHover {
 
 
 #data_scroll {
-	  display: none;
+	 display: none;
   z-index: 1;
   position: fixed;
   left: 50%;
   margin-left: 175px;
   bottom: 60px;
   color: #373737;
-  font-size: 32px;
   background-image: url("../images/arrow-down.svg");
-  width: 37px;
-  height: 20px;
-  background-size: 33px 17px;
+  background-size: 28px 13px;
   -moz-animation: bounce 2s infinite;
   -webkit-animation: bounce 2s infinite;
   animation: bounce 2s infinite;
   background-color: #FFF;
   background-repeat: no-repeat;
-  width: 60px;
-  height: 60px;
+  width: 55px;
+  height: 55px;
   border-radius: 50%;
-  border: 1px solid #DDD;
+  border: 2px solid #E4E4E4;
   background-position: center center;
 }
 
